Refactored code to be seperated and more organized.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asyncio~=3.4.3
 uvicorn~=0.23.1
 python-dotenv~=1.0.0
 fastapi~=0.100.0
-loguru~=0.7.0
 pydub~=0.25.1
 pyngrok~=6.0.0
 signalwire~=2.0.5
+aiosqlite~=0.19.0
